<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FoodDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:id="@+id/reviews_layout"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp">

            <ListView
                android:id="@+id/list_view_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_review_button"
            android:text="@string/add_review"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_review_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_review" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:foregroundGravity="center"
                    android:id="@+id/food_image_view"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/burger"
                    tools:srcCompat="@tools:sample/avatars"/>

                <Button
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/choose_image_button"
                    android:layout_marginLeft="30dp"
                    android:text="@string/choose_photo"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="18dp"
                    android:id="@+id/food_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:text="Food" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numStars="6"
                    android:rating="6"
                    android:stepSize="0.2"/>

            </LinearLayout>

            <EditText
                android:inputType="textMultiLine"
                android:id="@+id/get_text_review"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:height="120dp"
                />

            <Button
                android:id="@+id/submit_review_button"
                android:layout_width="384dp"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit_review"/>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <fragment
            android:id="@+id/fragment2"
            android:name="com.aje.onemenu.fragments.NavBarFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>