<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.UserInfoActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="489dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />


    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="397dp"
        android:text="@string/android"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/emailMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="333dp"
        android:background="#018577"
        android:text="Email"
        android:textColor="#fff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/nameMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="428dp"
        android:background="#018577"
        android:text="Name"
        android:textColor="#fff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:text="@string/android"
        android:textSize="22sp" />

    <Button
        android:id="@+id/edith_preferences_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/email"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="214dp"
        android:text="@string/preferences_edith" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:text="@string/signOut" />

    <!--Delete After-->
    <Button
        android:id="@+id/edgarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="32dp"
        android:text="Edgar"
        android:visibility="gone"/>
    <!--Delete After-->

    <!--Delete After-->
    <Button
        android:id="@+id/alexButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edgarButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="32dp"
        android:text="@string/meat"
        android:visibility="gone"/>
    <!--Delete After-->

    <!--Delete After-->
    <Button
        android:id="@+id/pushUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="323dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="87dp"
        android:text="@string/common_signin_button_text"
        android:visibility="gone"/>
    <!--Delete After-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment"
            class="com.aje.onemenu.fragments.NavBarFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>
</RelativeLayout>